fix header alignment in IE

--- a/app/assets/stylesheets/legacy/base.css.scss
+++ b/app/assets/stylesheets/legacy/base.css.scss
@@ -338,7 +338,6 @@ div.container.related {
 
 div.heading{
   width: 90%;
-  margin: auto;
   padding: 100px 0;
   text-align: center;
   h1 {
